docs & fix: requests fixed

--- a/app/src/main/res/layout/row_alerta.xml
+++ b/app/src/main/res/layout/row_alerta.xml
@@ -19,46 +19,84 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
+
+      <TextView
+        android:id="@+id/tv_reference"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextMedium"
+        tools:text="@tools:sample/full_names" />
+
       <TextView
         android:id="@+id/tv_chileanTime"
         android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextLarge"
+        android:textAppearance="@style/TextMedium"
         tools:text="@tools:sample/cities" />
+
       <TextView
-        android:id="@+id/tv_reference"
+        android:id="@+id/tv_utcTime"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextLarge"
-        tools:text="@tools:sample/full_names" />
+        android:textAppearance="@style/TextMedium"
+        tools:text="@tools:sample/lorem" />
+
       <TextView
         android:id="@+id/tv_magnitude"
         android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextLarge"
+        android:textAppearance="@style/TextMedium"
         tools:text="@tools:sample/lorem" />
       <TextView
         android:id="@+id/tvScale"
         android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextLarge"
+        android:textAppearance="@style/TextMedium"
         tools:text="@tools:sample/lorem" />
       <TextView
         android:id="@+id/tv_latitude"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextLarge"
+        android:textAppearance="@style/TextMedium"
         tools:text="@tools:sample/lorem" />
 
       <TextView
         android:id="@+id/tv_longitude"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextLarge"
+        android:textAppearance="@style/TextMedium"
         tools:text="@tools:sample/date/ddmmyy" />
+      <TextView
+        android:id="@+id/tv_source"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextMedium"
+        tools:text="@tools:sample/full_names" />
+
+      <TextView
+        android:id="@+id/tv_url"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextMedium"
+        tools:text="@tools:sample/full_names" />
+
+      <TextView
+        android:id="@+id/tv_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextMedium"
+        tools:text="@tools:sample/full_names" />
+
+      <TextView
+        android:id="@+id/tv_depth"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextMedium"
+        tools:text="@tools:sample/full_names" />
     </LinearLayout>
   </LinearLayout>
 
