--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
     android:orientation="horizontal">
     <ImageView
       android:id="@+id/imageView"
-      android:layout_width="137dp"
+      android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:background="#1B5E20"
@@ -22,7 +22,7 @@
       app:srcCompat="@drawable/attention" />
     <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
-      android:layout_width="345dp"
+      android:layout_width="348dp"
       android:layout_height="?attr/actionBarSize"
       android:elevation="4dp"
       android:minHeight="?attr/actionBarSize"
